--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,6 @@ CLOUDINARY_SECRET_KEY=-RTv8KP0gLtRwiBbOCKaxIHnHn8
 ADMIN_EMAIL=anveshyadavmokam@gmail.com
 ADMIN_PASSWORD=123456789
 JWT_SECRET_KEY=0929
+RAZORPAY_KEY_ID=rzp_test_A2WhAJWO0BSANH
+RAZORPAY_SECRET_KEY=xDQOx9XsRLsBYmphKWMktUrL
+CURRENCY='INR'
