--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://user:123123123@cluster0.84aix.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://prescripto:anvesh123@cluster0.yboyc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 CLOUDINARY_NAME=dbtzwyw5t
 CLOUDINARY_API_KEY=377926566617953
 CLOUDINARY_SECRET_KEY=-RTv8KP0gLtRwiBbOCKaxIHnHn8
